--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,11 @@ dependencies:
   # JSON for data export
   csv: ^6.0.0
 
+  # Desktop window management
+  window_manager: ^0.3.9
+  system_tray: ^2.0.3
+  shared_preferences: ^2.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
